# checkpoint9

./: CMakeLists.txt  package.xml
attach_shelf/: CMakeLists.txt  package.xml
attach_shelf/include/: pre_approach.h
attach_shelf/include/attach_shelf/: approach_service_server.h  pre_approach.h  pre_approach_v2.h
attach_shelf/launch/: attach_to_shelf.launch.py  pre_approach.launch.xml
attach_shelf/rviz/: config.rviz
attach_shelf/src/: approach_service_server.cpp  pre_approach.cpp  pre_approach_v2.cpp
include/: pre_approach.h
my_components/: CMakeLists.txt  package.xml
my_components/include/my_components/: attach_client.h  attach_server.h  pre_approach.h  visibility_control.h
my_components/launch/: attach_to_shelf.launch.py  pre_approach.launch.py
my_components/src/: attach_client.cpp  attach_server.cpp  manual_composition.cpp  pre_approach.cpp
src/: pre_approach.cpp
